<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/building_picker"
        android:checkableBehavior="single">
        <item
            android:id="@+id/building_physics"
            android:title="@string/physics_building" />
        <item
            android:id="@+id/building_maths"
            android:title="@string/fry_building" />
    </group>
    <item
        android:id="@+id/staff_switch"
        android:checked="false"
        android:title="@string/staff_access"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/disabled_item"
        android:checkable="false"
        android:title="@string/disabled_access"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" ></item>

</menu>
